crates/oxc_react_compiler/tests/snapshots/error.todo-invalid-jsx-in-catch-in-outer-try-with-finally.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo-invalid-jsx-in-catch-in-outer-try-with-finally.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: (BuildHIR::lowerStatement) Handle TryStatement without a catch clause", labels: [LabeledSpan { label: None, span: Span { start: 134, end: 292 }, primary: false }], help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

// @validateNoJSXInTryStatements @outputMode:"lint"
import { identity } from "shared-runtime";
function Component(props) {
	let el;
	try {
		let value;
		try {
			value = identity(props.foo);
		} catch {
			el = <div value={value} />;
		}
	} finally {
		console.log(el);
	}
	return el;
}
