crates/oxc_react_compiler/tests/snapshots/error.todo-invalid-jsx-in-try-with-finally.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo-invalid-jsx-in-try-with-finally.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: (BuildHIR::lowerStatement) Handle TryStatement without a catch clause", labels: [LabeledSpan { label: None, span: Span { start: 92, end: 154 }, primary: false }], help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

// @validateNoJSXInTryStatements @outputMode:"lint"
function Component(props) {
	let el;
	try {
		el = <div />;
	} finally {
		console.log(el);
	}
	return el;
}
