crates/oxc_react_compiler/tests/snapshots/error.todo-nested-method-calls-lower-property-load-into-temporary.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo-nested-method-calls-lower-property-load-into-temporary.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Invariant: [Codegen] Internal error: MethodCall::property must be an unpromoted + unmemoized MemberExpression", labels: [LabeledSpan { label: Some("Got: 'Identifier'"), span: Span { start: 159, end: 167 }, primary: false }], help: None, note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
