crates/oxc_react_compiler/tests/snapshots/error.todo-new-target-meta-property.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo-new-target-meta-property.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: (BuildHIR::lowerExpression) Handle MetaProperty expressions other than import.meta", labels: [LabeledSpan { label: None, span: SourceSpan { offset: 73, length: 10 }, primary: false }], help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
