crates/oxc_react_compiler/tests/snapshots/error.todo-pattern3_type_to_poly.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo-pattern3_type_to_poly.js
---
Parse errors:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "Unexpected token", labels: [LabeledSpan { label: None, span: SourceSpan { offset: 314, length: 1 }, primary: false }], help: None, note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
